--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^2.7.17",
+    "mapbox-gl": "^2.15.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-map-gl": "^7.1.6",
     "sass": "^1.69.3"
   },
   "devDependencies": {
